# learn-llm

./: .gitignore  README.md  app.py  chat.py  demo.py  githubqa.py  openai_api_key  package.json  pyproject.toml
.chainlit/: .langchain.db
